# core

./: .gitignore  pyproject.toml  setup.py
knb/errors/: __init__.py
knb/use_cases/: _boilerplate.py  group_by_tag.py  list_notes.py  update_note.py
knb/use_cases/specs/: __init__.py
knb/use_cases/tests/: test_list_notes.py  test_update_note.py
